# proveall

./: .gitignore  BULK_COMMIT_REVIEW_PLAN.md  CHANGELOG.md  LICENSE  MERGE_COMMIT_PLAN.md  MERGE_FILES_SEPARATION_PLAN.md  PLAN-auto-updater.md  PLAN-review-any-line.md  PLAN-settings-refactor.md  PLAN_dual_gutter_decorations.md  README.md  RELEASE.md  apt-requirements.txt  package-lock.json  package.json  refactor_review_modes_plan.md  vite.config.js
docs/: git_refactor_plan.md
scripts/: generate-latest-json.sh  prepare-release.sh  setup_test_repo.sh
tauri_src/: Cargo.toml  diesel.toml  tauri.conf.json
tauri_src/capabilities/: default.json
tauri_src/icons/: icon.icns
tauri_src/migrations/2026-02-24-073032-0000_initial_schema/: down.sql  up.sql
tauri_src/migrations/2026-02-24-080000-0001_add_updated_at_triggers/: down.sql  up.sql
tauri_src/src/: error.rs  lib.rs  main.rs  test_utils.rs
tauri_src/src/commands/: claude_commands.rs  event_commands.rs  fs_commands.rs  llm_commands.rs  mod.rs  project_commands.rs  pty_commands.rs  review_commands.rs  settings_commands.rs  terminal_commands.rs
tauri_src/src/db/: connection.rs  schema.rs
tauri_src/src/models/: branch_context.rs  composite_file_review_state.rs  event.rs  event_issue_composite_xref.rs  issue.rs  mod.rs  project.rs  review.rs
tauri_src/src/repositories/: mod.rs
tauri_src/src/services/: claude_service.rs  event_service.rs  llm_service.rs  mod.rs  project_service.rs  review_service.rs
tauri_src/src/services/event_service/: tests.rs
tauri_src/src/services/project_service/: tests.rs
tauri_src/src/services/review_service/: tests.rs
tauri_src/src/utils/: claude.rs  git.rs  hash_id.rs  llm.rs  mod.rs  pty.rs  settings.rs
(+36 files in other folders)
