[package]
name = "proveall"
version = "0.3.0"
edition = "2021"

[lib]
name = "proveall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = { version = "2", features = ["sqlite"] }
thiserror = "2"
dirs-next = "2"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
portable-pty = "0.8"
tokio = { version = "1", features = ["sync"] }
