[package]
name = "proveall"
version = "0.6.0"
edition = "2021"

[lib]
name = "proveall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = { version = "2", features = ["sqlite"] }
thiserror = "2"
dirs-next = "2"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
portable-pty = "0.8"
base64 = "0.22"
tokio = { version = "1", features = ["sync", "rt"] }
tauri-plugin-process = "2.3.1"

[dev-dependencies]
tempfile = "3.26.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
